Let a scheme written in REBOL serve a port, which finishes goal 1
codecs-test.r3 has no line on known-gaps.txt. 332 to 322.

The last ten entries were the SAFE block and they were one thing. The
SAFE codec and scheme are both written in REBOL and this already vendors
the file; the codec worked throughout. What could not happen was opening
a port on a scheme whose actor is written in REBOL.

Every port action goes to the port's actor, and an actor is one of two
things: a word naming something built in, or an object of functions.
Only the first was served. sys/make-scheme accepted a scheme, put it in
system/schemes with its actor intact, and then open refused it because
the scheme's name was not on a hard-coded list of eight -- so a scheme
written in REBOL could be registered and never used.

Which of the two needs the host's permission is the distinction that
decides it. A built-in actor is the way out of the interpreter and needs
its service granted first. An actor written in REBOL is no way out of
anything: whatever it reaches for, it reaches for by calling ordinary
words, and each of those asks the host for itself. So it opens without
asking for anything, and the test for it needs no host at all.

Three defects surfaced doing it, each confirmed against ./r3-head first.

Refinements were not reaching the actor. A refinement nobody asked for
brings no argument with it, so `remove/key store 'greeting` arrives as
two values and the key is the second -- not the fourth, where it would
sit if every refinement kept a place in the queue. remove/key on such a
port was deleting nothing.

A quoted parameter at the end of a block raised where it should bind
unset, which is how `try [su]` releases the user: SU's name is quoted
and accepts unset!, so a block with nothing after it means "no name".
Both halves match now -- unset where the parameter accepts it, and
expect-arg rather than no-arg where it does not.

And the measuring harness reported a home it had forbidden. SuiteHos